2023-02-12  Bart Schaefer  <schaefer@zsh.org>

	* 51362: Doc/Zsh/builtins.yo, Doc/Zsh/expn.yo, Doc/Zsh/params.yo,
	Doc/Zsh/mod_parameter.yo: Begin documentation for named references.

	* 51361: Test/K01nameref.ztst, Test/V10private.ztst: Tests
	for 51360.

	* 51360: Src/Modules/param_private.c, Src/Modules/parameter.c,
	Src/builtin.c, Src/params.c, Src/subst.c, Src/zsh.h: Initial
	implementation of named references.

	* 51404: Src/jobs.c: Nullify filelist after deleting (fix segfault)

2023-02-09  Oliver Kiddle  <opk@zsh.org>

	* 51320, 51383: Src/Zle/zle_main.c, Src/Zle/complist.c,
	Src/Zle/zle_tricky.c, Test/D01prompt.ztst,
	Test/X04zlehighlight.ztst: fixes to prevent later reappearance
	of old attributes

2023-02-06  Peter Stephenson  <p.stephenson@samsung.com>

	* 51350: Src/subst.c, Test/D04parameter.ztst: the combination
	${(S)...//#%...} needs to match as far as possible.

2023-02-02  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 51354: Doc/Zsh/params.yo: Fix markup in man page version

2023-02-02  Peter Stephenson  <p.stephenson@samsung.com>

	* 51306: Doc/Zsh/expn.yo, Src/subst.c, Test/D04parameter.ztst:
	error message in ${unset?...} should be expanded.

	* 51307: Src/input.c, Src/parse.c, Test/A02alias.ztst: error
	on attempt to expand alias in function definition name didn't
	find the original alias and printed an extra error.

2023-01-31  Bart Schaefer  <schaefer@zsh.org>

	* 51342: Etc/zsh-development-guide: update PARAMDEF description

	* 51337: Doc/Zsh/expn.yo, Doc/Zsh/mod_parameter.yo: parameter
	attributes cross-reference typeset equivalents (or lack thereof)

2023-01-27  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (cribbed from users/28784 by Roman):
	Test/D04parameter.ztst: Add XFail tests for substituting a
	single-quoting backslash.

2023-01-27  Shohei YOSHIDA  <syohex@gmail.com>

	* 51330: Completion/Unix/Command/_python: Update python3
	completion for version 3.11

2023-01-24  Shohei YOSHIDA  <syohex@gmail.com>
